# siryis

./: .gitignore  Cargo.toml  README.md
siryis/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
siryis/syntaxes/: siryis.tmLanguage.json
src/: lib.rs  main.rs  run.rs  test.rs
src/compiler/: mod.rs
src/parser/: identifier.rs  mod.rs  module.rs  procedure.rs  string.rs  value.rs  ws.rs
src/project/: mod.rs
