[package]
edition = "2021"
name = "siryis"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
clap = {version = "4.0.32", features = ["derive"]}
knuffel = "2.0.0"
miette = {version = "4.3.0", features = ["fancy"]}
nom = "7.1.2"
nom-unicode = "0.3.0"
nom_locate = "4.0.0"
rand = "0.8.5"
zubbers = "0.0.1"
# zubbers = {path = "D:/Development/Repositories/Zub"}
